fix: align time indicators with progress bar

--- a/src/components/Player/player.module.less
+++ b/src/components/Player/player.module.less
@@ -49,6 +49,8 @@
 .start,
 .duration {
   font-size: 0.7rem;
+  padding-bottom: 5px;
+  
 }
 
 .buttonsContainer {
